# quatuomotron

./: .gitignore  Cargo.toml  eleves.db  readme.md
FrontVue/: README.md  package-lock.json  package.json
FrontVue/src/: App.vue
FrontVue/src/components/: About.vue  Contact.vue  Navbar.vue  Services.vue  StudentList.vue
rocket/: people.db
rocket/src/: db.rs  main.rs
rocket_api/: Cargo.toml  people.db  readme.md
rocket_api/src/: main.rs
src/: create_db.rs  main.rs
vue/: index.html  package-lock.json  package.json
vue/src/: main.js
vue/src/components/: About.vue  Contact.vue  Home.vue  Navbar.vue  Services.vue  StudentList.vue
vue/src/router/: router.js
