[package]
name = "quatuomotron"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = "0.32.1"
rand = "0.8.5"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
rocket_cors = "0.6.0"

[[bin]]
name = "create_db"
path = "src/create_db.rs"